[package]
name = "litec"
version = "0.1.1-alpha"
edition = "2024"
readme = "README.md"
license = "MIT"

[dependencies]
litec_parse = { path = "compiler/litec_parse" }
litec_ast = { path = "compiler/litec_ast" }
litec_span = { path = "compiler/litec_span" }
litec_error = { path = "compiler/litec_error" }
litec_lower = { path = "compiler/litec_lower" }
litec_hir = { path = "compiler/litec_hir" }
litec_type_checker = { path = "compiler/litec_type_checker" }
litec_mir_lower = { path = "compiler/litec_mir_lower" }
litec_codegen = { path = "compiler/litec_codegen" }

clap = { version = "4.5.51", features = ["derive"] }
anyhow = "1.0.100"
# cranelift = "0.124.1"

[workspace]
members = [ 
    "compiler/litec_ast",
    "compiler/litec_parse",
    "compiler/litec_span",
    "compiler/litec_error",
    "compiler/litec_lower", 
    "compiler/litec_hir", 
    "compiler/litec_type_checker", 
    "compiler/litec_typed_hir", 
    "compiler/litec_name_resolver", 
    "compiler/litec_mir", 
    "compiler/litec_mir_lower", 
    "compiler/litec_codegen"
]

[profile.release]
lto = true

[target.x86_64-pc-windows-gnu]
rustflags = [
    "-C", "link-args=-lffi -Wl,-Bstatic -lffi -Wl,-Bdynamic",
]