[package]
name = "litec_name_resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
litec_hir = { path = "../litec_hir" }
litec_typed_hir = { path = "../litec_typed_hir" }
litec_span = { path = "../litec_span" }
litec_error = { path = "../litec_error" }

cfg-if = "1.0.4"
rustc-hash = "2.1.1"

[lib]

[dev-dependencies]
litec_parse = { path = "../litec_parse" }
litec_ast_lower = { path = "../litec_ast_lower" }